# toolbox

./: Demo.cpp  README.md  char_upper_lower.cpp  city_search_with_mist.cpp  countNumber.cpp  dichotomy.cpp  dirext.m  easy7reverse_number.cpp  easy_two_sum.cpp  eight_queen.cpp  fib.naive.cpp  fib.optimize.cpp  fib.optimize2.cpp  flip_cubic.cpp  gold_string_num_cin_one_row.cpp  jingdong1.cpp  matrix_max_area.cpp  max_flip_string.cpp  max_sum_subarray.cpp  max_xor_num.cpp  med2addTwoNums.cpp  med5longestPalindromicSubstring.cpp  med6zigzag.cpp  min_distance.cpp  num_of_choice.cpp  package_problem.cpp  partition_number.cpp  poison_1000.cpp  quickSort.cpp  randomGauss.cpp  rectCover.cpp  rectOverlap.cpp  shiyanlou_lock.cpp  signed_array_sum.cpp  square_max_area.cpp  virtus.cpp  zigzag.cpp  zigzag2.cpp
matlab/video_to_image/: video2image_all_.m
ubuntu_opencv/: CMakeLists.txt  folder_files.cpp  imageBasics.cpp  useful_snippet.cpp  useful_snippet_opencv.cpp
ubuntu_opencv/descriptor_extractor_matcher/: CMakeLists.txt~
ubuntu_opencv/example_opencv_svm/Project1/: SVM_DATA.xml  main.cpp
ubuntu_opencv/test_time/test_time/: main.cpp
